# RanokLanguage

./: .gitignore  CMakeLists.txt
CodeExamples/: test1.txt
RanokLanguageCore/: CMakeLists.txt
RanokLanguageCore/Include/Ranok/LanguageCore/: CodeGenerator.h  CustomFunction.h  Expression.h  FunctionInfo.h  Functions.h  Lexer.h  Operations.h  Parser.h  Program.h  SymbolsTable.h  Tokens.h  Types.h
RanokLanguageCore/Include/Ranok/Utility/: CheckedResult.h  Math.h  StringUtility.h
RanokLanguageCore/Sources/: CodeGenerator.cpp  CustomFunction.cpp  Expression.cpp  Functions.cpp  Lexer.cpp  Operations.cpp  Parser.cpp  Program.cpp  StringUtility.cpp  SymbolsTable.cpp
Sources/: main.cpp
Sources/LanguageCore/: Checks.h  CodeGenerator.cpp  CodeGenerator.h  CustomFunction.cpp  CustomFunction.h  Expression.cpp  Expression.h  FunctionInfo.h  Functions.cpp  Functions.h  Lexer.cpp  Lexer.h  Operations.cpp  Operations.h  Parser.cpp  Parser.h  Program.cpp  Program.h  SymbolsTable.cpp  Tokens.h  Utils.h
Tester/: CMakeLists.txt  main.cpp
